--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Anthony's World</title>
 </head>
 <body>
+    <img src="banner.jpeg">
     <h1>Hello world!</h1>
     <p>Welcome to my website!</p>
     <p>Thanks for visiting. To learn more about me <a href="aboutme.html">click here</a></p>
