--- a/aboutme.html
+++ b/aboutme.html
@@ -3,10 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Me</title>
 </head>
 <body>
     <img src="banner.jpeg">
+    <table>
+        <tbody>
+            <tr>
+                <td><a href="index.html"> <img src="home.png"></a></td>
+                <td><a href="javascripts.html"> <img src="javascripts.png"></a></td>
+                <td><a href="aboutme.html"> <img src="aboutme.png"></a></td>
+            </tr>
+        </tbody>
+    </table>
+
     <h1>About Anthony</h1>
+    <p>I am from Warwick, Rhode Island and I attended Toll Gate High School. <br>
+
+        I am a Computer Science major because I have always taken an interest <br>
+        in coding and advanced mathematics.  I plan to obtain my BS within the next <br>
+        4 years at URI. <br><br>
+
+        My favorite foods are:
+
+    <ol>
+        <li>Chicken Parmesan</li>
+        <li>Sandwiches</li>
+        <li>Cereal</li>
+    </ol>
+
+    In my free time I enjoy watching and playing soccer.  My favorite soccer team <br>
+    is Chelsea FC.  They are located in London, England and play in the top division <br>
+    of English professional soccer, the Premeier League.
+    </p>
 </body>
 </html>
