--- a/javascripts.html
+++ b/javascripts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anthony's World</title>
+    <title>Javascripts</title>
 </head>
 <body>
     <img src="banner.jpeg">
@@ -17,9 +17,5 @@
         </tbody>
     </table>
 
-    <h1>Hello world!</h1>
-    <p>Welcome to my website! My name is Anthony Martinez.  This website is dedicated <br>
-    to my CSC106 computer science class at the University of Rhode Island where I will showcase all of my projects and programs.</p>
-    <p>Thanks for visiting. To learn more about me <a href="aboutme.html">click here</a></p>
 </body>
 </html>
