--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Anthony's World</title>
 </head>
 <body>
-    <img src="banner.jpeg">
+    <img src="banner.jpeg" alt="banner">
     <table>
         <tbody>
             <tr>
-                <td><a href="index.html"> <img src="home.png"></a></td>
-                <td><a href="javascripts.html"> <img src="javascripts.png"></a></td>
-                <td><a href="aboutme.html"> <img src="aboutme.png"></a></td>
+                <td><a href="index.html"> <img src="home.png" alt="Home"></a></td>
+                <td><a href="javascripts.html"> <img src="javascripts.png" alt="Javascripts"></a></td>
+                <td><a href="aboutme.html"> <img src="aboutme.png" alt="About Me"></a></td>
             </tr>
         </tbody>
     </table>
