--- a/javascripts.html
+++ b/javascripts.html
@@ -10,9 +10,9 @@
     <table>
         <tbody>
             <tr>
-                <td><a href="index.html"> <img src="home.png"></a></td>
-                <td><a href="javascripts.html"> <img src="javascripts.png"></a></td>
-                <td><a href="aboutme.html"> <img src="aboutme.png"></a></td>
+                <td><a href="index.html"> <img src="home.png" alt="Home"></a></td>
+                <td><a href="javascripts.html"> <img src="javascripts.png" alt="Javascripts"></a></td>
+                <td><a href="aboutme.html"> <img src="aboutme.png" alt="About Me"></a></td>
             </tr>
         </tbody>
     </table>
