--- a/aboutme.html
+++ b/aboutme.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <img src="banner.jpeg">
-    <table>
+    <table width="800px">
         <tbody>
             <tr>
-                <td><a href="index.html"> <img src="home.png" alt="Home"></a></td>
-                <td><a href="javascripts.html"> <img src="javascripts.png" alt="Javascripts"></a></td>
-                <td><a href="aboutme.html"> <img src="aboutme.png" alt="About Me"></a></td>
+                <td align="center"><a href="index.html"> <img src="home.png" alt="Home"></a></td>
+                <td align="center"><a href="javascripts.html"> <img src="javascripts.png" alt="Javascripts"></a></td>
+                <td align="center"><a href="aboutme.html"> <img src="aboutme.png" alt="About Me"></a></td>
             </tr>
         </tbody>
     </table>
