--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
     <title>About Me</title>
 </head>
 <body>
-    <img src="banner.jpeg">
+    <img src="banner.jpeg" alt="banner" align="center">
     <table width="800px">
         <tbody>
             <tr>
