--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Anthony's World</title>
 </head>
 <body>
-    <img src="banner.jpeg" alt="banner">
+    <img src="banner.jpeg" alt="banner" align="center">
     <table width="800px">
         <tbody>
             <tr>
