--- a/javascripts.html
+++ b/javascripts.html
@@ -6,7 +6,7 @@
     <title>Javascripts</title>
 </head>
 <body>
-    <img src="banner.jpeg">
+    <img src="banner.jpeg" alt="banner" align="center">
     <table width="800px">
         <tbody>
             <tr>
