--- a/javascripts.html
+++ b/javascripts.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascripts</title>
+    <link rel="stylesheet" href="mystyle.css">
 </head>
-<body>
-    <img src="banner.jpeg" alt="banner" align="center">
+<body id="body2">
+    <img src="Anthony-2.jpg" id="anthonybanner" alt="banner" align="center">
     <table width="800px">
         <tbody>
             <tr>
-                <td align="center"><a href="index.html"> <img src="home.png" alt="Home"></a></td>
-                <td align="center"><a href="javascripts.html"> <img src="javascripts.png" alt="Javascripts"></a></td>
-                <td align="center"><a href="aboutme.html"> <img src="aboutme.png" alt="About Me"></a></td>
+                <td align="center"><a href="index.html"> <img src="homebutton.png" alt="Home"></a></td>
+                <td align="center"><a href="javascripts.html"> <img src="javascriptsbutton.png" alt="Javascripts"></a></td>
+                <td align="center"><a href="aboutme.html"> <img src="aboutbutton.png" alt="About Me"></a></td>
             </tr>
         </tbody>
     </table>
 
+    <img src="myBackground.jpg" alt="background" align="center">
 </body>
 </html>
