--- a/aboutme.html
+++ b/aboutme.html
@@ -4,37 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="stylesheet" href="mystyle.css">
 </head>
-<body>
-    <img src="banner.jpeg" alt="banner" align="center">
+<body id="body3">
+    <img src="Anthony-2.jpg" id="anthonybanner" alt="banner" align="center">
     <table width="800px">
         <tbody>
             <tr>
-                <td align="center"><a href="index.html"> <img src="home.png" alt="Home"></a></td>
-                <td align="center"><a href="javascripts.html"> <img src="javascripts.png" alt="Javascripts"></a></td>
-                <td align="center"><a href="aboutme.html"> <img src="aboutme.png" alt="About Me"></a></td>
+                <td align="center"><a href="index.html"> <img src="homebutton.png" alt="Home"></a></td>
+                <td align="center"><a href="javascripts.html"> <img src="javascriptsbutton.png" alt="Javascripts"></a></td>
+                <td align="center"><a href="aboutme.html"> <img src="aboutbutton.png" alt="About Me"></a></td>
             </tr>
         </tbody>
     </table>
 
-    <h1>About Anthony</h1>
-    <p>I am from Warwick, Rhode Island and I attended Toll Gate High School. <br>
+    <h1 id="about">About Anthony</h1>
+    <img src="anthonyphoto.jpg" id="anthonyphoto" height="150">
+
+    <img src="anthony.jpg" id="anthonyphoto2" height="150">
+    <p id="aboutp">I am from Warwick, Rhode Island and I attended Toll Gate High School. <br>
 
         I am a Computer Science major because I have always taken an interest <br>
         in coding and advanced mathematics.  I plan to obtain my BS within the next <br>
         4 years at URI. <br><br>
-
-        My favorite foods are:
-
-    <ol>
-        <li>Chicken Parmesan</li>
-        <li>Sandwiches</li>
-        <li>Cereal</li>
-    </ol>
-
-    In my free time I enjoy watching and playing soccer.  My favorite soccer team <br>
-    is Chelsea FC.  They are located in London, England and play in the top division <br>
-    of English professional soccer, the Premeier League.
+    
+    <img src="IMG_7008.jpg" id="robotics" height="130">
+    <img src="IMG_7009.jpg" id="piece" height="130">
     </p>
+
+    <p id="aboutp2">In my free time I enjoy watching and playing soccer.  Also, I enjoy collecting <br>
+   and learning about watches. Above, you can see my first ever watch that I bought <br>
+    after high school. It is an Orient Ray II. To the  left of my watch is a banner that I made <br>
+    for my high school robotics teacher.  It is an important item of mine because I along <br>
+    with some of my best friends made it to the RI FTC State Championship as a <br>
+    rookie team during that year.
+    </p>
+
+    <img src="myBackground.jpg" alt="background" align="center">
 </body>
 </html>
