--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anthony's World</title>
+    <link rel="stylesheet" href="mystyle.css">
 </head>
-<body>
-    <img src="banner.jpeg" alt="banner" align="center">
+
+<body id="body1">
+    <img src="Anthony-2.jpg" id="anthonybanner" alt="banner" align="center">
     <table width="800px">
         <tbody>
             <tr>
-                <td align="center"><a href="index.html"> <img src="home.png" alt="Home"></a></td>
-                <td align="center"><a href="javascripts.html"> <img src="javascripts.png" alt="Javascripts"></a></td>
-                <td align="center"><a href="aboutme.html"> <img src="aboutme.png" alt="About Me"></a></td>
+                <td align="center"><a href="index.html"> <img src="homebutton.png" alt="Home"></a></td>
+                <td align="center"><a href="javascripts.html"> <img src="javascriptsbutton.png" alt="Javascripts"></a></td>
+                <td align="center"><a href="aboutme.html"> <img src="aboutbutton.png" alt="About Me"></a></td>
             </tr>
         </tbody>
     </table>
 
     <h1>Hello world!</h1>
-    <p>Welcome to my website! My name is Anthony Martinez.  This website is dedicated <br>
+    <p id="ip1">Welcome to my website! My name is Anthony Martinez.  This website is dedicated
     to my CSC106 computer science class at the University of Rhode Island where I will showcase all of my projects and programs.</p>
-    <p>Thanks for visiting. To learn more about me <a href="aboutme.html">click here</a></p>
+    <p id="ip2">Thanks for visiting. To learn more about me <a href="aboutme.html">click here</a></p>
+
+    <img src="myBackground.jpg" alt="background" align="center">
 </body>
+
 </html>
