--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     </table>
 
     <h1>Hello world!</h1>
-    <p id="ip1">Welcome to my website! My name is Anthony Martinez.  This website is dedicated
-    to my CSC106 computer science class at the University of Rhode Island where I will showcase all of my projects and programs.</p>
+    <p id="ip1">Welcome to my website! My name is Anthony Martinez.  This website is dedicated <br>
+    to my CSC106 computer science class at the University of Rhode Island where I will <br>
+    showcase all of my projects and programs.
+    </p>
     <p id="ip2">Thanks for visiting. To learn more about me <a href="aboutme.html">click here</a></p>
 
     <img src="myBackground.jpg" alt="background" align="center">
