--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </tbody>
     </table>
 
-    <h1>Hello world!</h1>
+    <h1 id="helloworld">Hello world!</h1>
     <p id="ip1">Welcome to my website! My name is Anthony Martinez.  This website is dedicated <br>
     to my CSC106 computer science class at the University of Rhode Island where I will <br>
     showcase all of my projects and programs.
