--- a/javascripts.html
+++ b/javascripts.html
@@ -20,6 +20,6 @@
 
     <h2><a href="https://www.khanacademy.org/computer-programming/martinez_dancing_bitmoji/5177687171448832">martinez_dancing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/martinez_dancing_bitmoji/5177687171448832/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
 
-    <h2><a href="https://www.khanacademy.org/computer-programming/martinez_racingbitmoji/6438786306981888">martinez_racingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/martinez_racingbitmoji/6438786306981888/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
+    <h2><a href="https://www.khanacademy.org/computer-programming/martinez_racingbitmojifun/4592728878661632">martinez_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/martinez_racingbitmojifun/4592728878661632/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
 </body>
 </html>
