--- a/javascripts.html
+++ b/javascripts.html
@@ -23,5 +23,7 @@
     <h2><a href="https://www.khanacademy.org/computer-programming/martinez_racingbitmojifun/4592728878661632">martinez_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/martinez_racingbitmojifun/4592728878661632/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
 
     <h2><a href="https://www.khanacademy.org/computer-programming/martinez_medicaldiagnosis/5661756195913728">martinez_medicalDiagnosis</a></h2><script src="https://www.khanacademy.org/computer-programming/martinez_medicaldiagnosis/5661756195913728/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
+
+    <h2><a href="https://www.khanacademy.org/computer-programming/martinez_dancefloor/6020903431094272">martinez_dancefloor</a></h2><script src="https://www.khanacademy.org/computer-programming/martinez_dancefloor/6020903431094272/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
 </body>
 </html>
