--- a/javascripts.html
+++ b/javascripts.html
@@ -29,5 +29,7 @@
     <h2><a href="https://www.khanacademy.org/computer-programming/martinez_contacts/5297735632470016">martinez_contacts</a></h2><script src="https://www.khanacademy.org/computer-programming/martinez_contacts/5297735632470016/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
 
     <h2><a href="https://www.khanacademy.org/computer-programming/martinez_molemash/5887433509748736">martinez_moleMash</a></h2><script src="https://www.khanacademy.org/computer-programming/martinez_molemash/5887433509748736/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
+
+    <h2><a href="https://www.khanacademy.org/computer-programming/martinezkleinberg_memory/6047731638517760">martinezKleinberg_memory</a></h2><script src="https://www.khanacademy.org/computer-programming/martinezkleinberg_memory/6047731638517760/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
 </body>
 </html>
