--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <tr>
                 <td align="center"><a href="index.html"> <img src="homebutton.png" alt="Home"></a></td>
                 <td align="center"><a href="javascripts.html"> <img src="javascriptsbutton.png" alt="Javascripts"></a></td>
+                <td align="center"><a href="final.html"> <img src="finalbutton.png" alt="Final"></a></td>
                 <td align="center"><a href="aboutme.html"> <img src="aboutbutton.png" alt="About Me"></a></td>
             </tr>
         </tbody>
