--- a/final.html
+++ b/final.html
@@ -20,7 +20,12 @@
     </table>
 
     <h2><a href="https://www.khanacademy.org/computer-programming/spin-off-of-csc106_final-project/4935025340628992">CSC106 Final Project</a></h2><script src="https://www.khanacademy.org/computer-programming/spin-off-of-csc106_final-project/4935025340628992/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
-    <p id="gameDescription">My Final Project program is a single player air hockey game where the player plays against our own CPU.  When running the program, you will be greeted with game instructions which is proceeded by multiple game options which includes choosing your in-game character and picking the game difficulty. There are three choices for in game difficulty: Level 1, Level 2, and Level 3, with Level 3 being the hardest difficulty. The winner of the game is determined by the first player to reach 7 goals.
+    <p id="gameDescription">My Final Project program is a single player air hockey game where the player plays <br>
+        against our own CPU.  When running the program, you will be greeted with game instructions <br>
+        which is proceeded by multiple game options which includes choosing your in-game character and <br>
+        picking the game difficulty. There are three choices for in game difficulty: Level 1, Level 2, <br>
+        and Level 3, with Level 3 being the hardest difficulty. The winner of the game is determined by <br>
+        the first player to reach 7 goals.
     </p>
 
     <h2><a href="https://youtu.be/xvIhWWNTrzs">Video on Game Execution</a></h2>
